--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,37 @@ h1{
     text-align: center;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+div{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.div_item{
+    width: 10%;
+    font-size: 18px;
+    padding: 4px;
+    appearance: none;
+    text-align-last: center;
+    background-color: buttonface;
+    border-bottom-width: 2px;
+    border-top-width: 2px;
+    border-left-width: 2px;
+    border-right-width: 2px;
+    border-top-style: outset;
+    border-right-style: outset;
+    border-bottom-style: outset;
+    border-left-style: outset;
+    border-top-color: buttonface;
+    border-right-color: buttonface;
+    border-bottom-color: buttonface;
+    border-left-color: buttonface;
+    border-radius: 0;
+    color: buttontext;
+    cursor: pointer;
+}
+
+button:active{
+    transform:scale(1.1, 1.1);
+}
